# movie-recommendation-system

.github/workflows/: auth_mypy_lint_form_check.yml
auth_service/: .env.example  pyproject.toml  start.sh
auth_service/app/: main.py
auth_service/app/DB/: __init__.py  db.py
auth_service/app/DB/models/: beanie_models.py  pydantic_models.py
auth_service/app/api/: auth_routes.py  dependencies.py  exceptions.py  responses.py
auth_service/app/core/: __init__.py  config.py  custom_exceptions.py  logs.py
auth_service/app/repo/: auth_repo.py  events_repo.py
auth_service/app/services/: auth_service.py  common_service.py
common/: pyproject.toml
notification-service/: pyproject.toml
preference-service/: pyproject.toml
recommendation-service/: pyproject.toml
